@@ -7,7 +7,8 @@
 package org.elasticsearch.xpack.security.rest.action.saml;
 
 import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.common.ParseField;
+import org.elasticsearch.common.xcontent.ParseField;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.ObjectParser;
 import org.elasticsearch.common.xcontent.XContentBuilder;
@@ -23,7 +24,6 @@ import org.elasticsearch.xpack.core.security.action.saml.SamlLogoutRequest;
 import org.elasticsearch.xpack.core.security.action.saml.SamlLogoutResponse;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
@@ -49,15 +49,9 @@ public class RestSamlLogoutAction extends SamlBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
-            new ReplacedRoute(POST, "/_security/saml/logout",
-                POST, "/_xpack/security/saml/logout")
+        return List.of(
+            Route.builder(POST, "/_security/saml/logout")
+                .replaces(POST, "/_xpack/security/saml/logout", RestApiVersion.V_7).build()
         );
     }
 
@@ -71,16 +65,16 @@ public class RestSamlLogoutAction extends SamlBaseRestHandler {
         try (XContentParser parser = request.contentParser()) {
             final SamlLogoutRequest logoutRequest = PARSER.parse(parser, null);
             return channel -> client.execute(SamlLogoutAction.INSTANCE, logoutRequest,
-                    new RestBuilderListener<SamlLogoutResponse>(channel) {
-                        @Override
-                        public RestResponse buildResponse(SamlLogoutResponse response, XContentBuilder builder) throws Exception {
-                            builder.startObject();
-                            builder.field("id", response.getRequestId());
-                            builder.field("redirect", response.getRedirectUrl());
-                            builder.endObject();
-                            return new BytesRestResponse(RestStatus.OK, builder);
-                        }
-                    });
+                new RestBuilderListener<SamlLogoutResponse>(channel) {
+                    @Override
+                    public RestResponse buildResponse(SamlLogoutResponse response, XContentBuilder builder) throws Exception {
+                        builder.startObject();
+                        builder.field("id", response.getRequestId());
+                        builder.field("redirect", response.getRedirectUrl());
+                        builder.endObject();
+                        return new BytesRestResponse(RestStatus.OK, builder);
+                    }
+                });
         }
     }
 }
